# wally

./: .gitignore  README.md  README_LAUNCH.md  requirements.txt
configs/maps/: map.yaml
configs/nav2/: .nav2_parameters.yaml.swp  explore.yaml  nav2_parameters.yaml
ros2_ws/src/livox_ros_driver2/config/: MID360_config.json
ros2_ws/src/livox_ros_driver2/src/: lds_lidar.cpp
ros2_ws/src/wally_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/wally_bringup/launch/: camera.launch.py  jetson.launch.py  lidar.launch.py  robot_description.launch.py  teleop.launch.py  workspace.launch.py
ros2_ws/src/wally_bringup/urdf/: macros.xacro
ros2_ws/src/wally_bringup_old/: package.xml  setup.py
ros2_ws/src/wally_bringup_old/launch/: jetson.launch.py  robot_description.launch.py
ros2_ws/src/wally_bringup_old/urdf/: wally.urdf.xacro
ros2_ws/src/wally_fastlio/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/wally_fastlio/config/: mid360.yaml
ros2_ws/src/wally_fastlio/include/: common_lib.h
ros2_ws/src/wally_fastlio/launch/: gdb_debug_example.launch  mapping.launch.py  mid360_bringup.launch.py
ros2_ws/src/wally_fastlio/rviz/: fastlio_odom.rviz
ros2_ws/src/wally_fastlio/src/: laserMapping.cpp
ros2_ws/src/wally_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/wally_nvblox/: package.xml  setup.cfg  setup.py
ros2_ws/src/wally_nvblox/config/: nvblox_lidar.yaml  nvblox_wally.yaml
ros2_ws/src/wally_nvblox/launch/: nvblox.launch.py  nvblox_lidar.launch.py
ros2_ws/src/wally_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/wally_perception/launch/: segmentation.launch.py
ros2_ws/src/wally_perception/wally_perception/: mask_convertor_node.py
scripts/: fix_livox_network.sh  fix_nvdla_compiler.sh  install_ros_dependencies.sh
