<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wally_bringup</name>
  <version>0.0.0</version>
  <description>Wally bringup launch package for robot description and sensor stack orchestration</description>
  <maintainer email="smit@todo.todo">smit</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>wally_fastlio</exec_depend>
  <exec_depend>wally_nvblox</exec_depend>
  <exec_depend>wally_perception</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
